Added some content to ruby.html

--- a/Ruby.html
+++ b/Ruby.html
@@ -12,10 +12,28 @@
 				<a href="Ruby"><li>Ruby</li></a>
 			</ul>
 		</div>
+		<section id="introduction">
+			<h2>Meet Ruby</h2>
+			<p>
+				Ruby is an <strong>object-oriented, dynamic, general-purpose, programming language</strong>.
+			</p>
+			<h3>Object Oriented</h3>
+			<p>
+				Ruby is an object-oriented programming language with classes that define object attributes and behaviors. Objects can inherit attributes and behaviors from parent objects, which is a powerful feature of object-oriented design.
+			</p>	
+			<h3>Dynamic</h3>
+			<p>
+				Ruby is dynamic in that methods and objects can be manipulated and extended at run-time. Classes are never truly cemented down in Ruby as methods and attributes can be added while the program is running if necessary.
+			</p>
+			<h3>General Purpose</h3>
+			<p>
+				Ruby is a <a href="http://en.wikipedia.org/wiki/Ruby_(programming_language)#Features" target="_blank">full-featured</a> programming language that can be used in many situations. It is particularly useful as the server-side solution in web development.
+			</p>	
+		</section>
 		<section>
-			<h2>An Introduction to Ruby</h2>
 			
 		</section>
+
 			
 	</body>
 </html>
