Finished the HTML

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
 	<head>
 		<title>
-			@Welcome = "Welcome"
+			Home
 		</title>
 	</head>
 	<body>
-		<h1>puts @Welcome</h1>
+		<h1>Troy Shields</h1>
 		<div>
 			<ul>
-				<a href="index.html"><li>Home</li></a>
-				<a href="Ruby.html"><li>Ruby</li></a>
+				<li><a href="Ruby.html">Ruby</a></li>
+				<li><a href="Code.html">Getting Started</a></li>
 			</ul>
 		</div>
 		<section>
