--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>
-			Home
-		</title>
+		<title>Home</title>
+		<meta charset="utf-8" />
 	</head>
 	<body>
-		<h1>Troy Shields</h1>
-		<div>
-			<ul>
-				<li><a href="Ruby.html">Ruby</a></li>
-				<li><a href="Code.html">Getting Started</a></li>
-			</ul>
-		</div>
+		<header>
+			<h1>Troy Shields</h1>
+			<nav>
+				<ul>
+					<li><a href="Ruby.html">Ruby</a></li>
+					<li><a href="Code.html">Getting Started</a></li>
+				</ul>
+			</nav>
+		</header>
 		<section>
 			<h2>Introduction</h2>
 			<p>Blah blah blah blah blah blah blah.</p>
 		</section>
-
-
 	</body>
 </html>
