Added timer and header js files.

--- a/GettingStarted.html
+++ b/GettingStarted.html
@@ -6,17 +6,10 @@
 		</title>
 		<link rel=stylesheet type="text/css" href="css/style.css">
 	</head>
-	<body class="content main">
-		<div class="header">
-			<img class="hero" src="css/img/hero.jpg"/>
-			<h1 class="title">Getting Started</h1>
-			<div class="nav">
-				<ul>
-					<a href="Ruby.html"><li class="current">Ruby</li></a>
-					<a href="GettingStarted.html"><li>Getting Started</li></a>
-				</ul>
-			</div>
-		</div>
+	<body id="content" class="content main">
+		<script src="js/header.js"></script>
+		<script>createHeader("Getting Started");</script>
+
 		<section class="instruction center">
 			<h2>Verify that Ruby is Installed</h2>
 			<p>If you are running on Mac OS X right now (which you should be) then you are in luck because Ruby should already be installed! You can verify this by opening a terminal and entering the following command:
