--- a/Ruby.html
+++ b/Ruby.html
@@ -1,24 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>
-			Ruby
-		</title>
-
 		<link rel=stylesheet type="text/css" href="css/style.css">
-
 	</head>
-	<body class="content">
-		<div class="header">
-			<img class="hero" src="css/img/hero.jpg"/>
-			<h1 class="title">Ruby</h1>
-			<div class="nav">
-				<ul>
-					<a href="Ruby.html"><li class="current">Ruby</li></a>
-					<a href="GettingStarted.html"><li>Getting Started</li></a>
-				</ul>
-			</div>
-		</div>
+	<body id="content" class="content">
+		<div id="overlay"></div>
+		<script src="js/header.js"></script>
+		<script>createHeader("Ruby");</script>
+
+		<script src="js/obnoxious.js"></script>
 
 		<section class="info">
 			<section id="introduction">
@@ -126,7 +116,5 @@
 				</div>
 			</section>
 		</section>
-
-			
 	</body>
 </html>
