Doing JQuery assignment

--- a/GettingStarted.html
+++ b/GettingStarted.html
@@ -48,6 +48,6 @@
 			<h2>Continue Learning</h2>
 			<p>You've been introduced to the IRB, but there is still a lot to learn in Ruby to become a truly productive developer. Continue learning at the <a href="https://www.ruby-lang.org/en/documentation/quickstart/2/">Ruby website</a> to learn about classes and more.</p>
 		</section>
-
+		<script>createFooter()</script>
 	</body>
 </html>
